--- a/style.css
+++ b/style.css
@@ -7,22 +7,33 @@ header {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-transform: uppercase;
   text-align: center;
-  width: auto;
-  height: 700px;
-  background: url(images/black-forest.jpg) 100% 100% no-repeat;
+  width: 100%;
+  height: 800px;
+  background: url(images/cover.jpg);
+  background-color: #222;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   background-size: cover;
+  background-position: 100% 0;
 }
 
+.header-overlay {
+  background-color: rgba(44, 62, 80, 0.3);
+  background-image: url(images/pattern.png);
+  background-repeat: repeat;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 /*navbar*/
 .test {
-  width: 940px;
-  margin: 0 auto;
-  box-sizing: border-box;
-  padding-top: 20px;
-  -position: fixed;
-  -top: 0;
-  -left: 0;
-  -right: 0;
+  position: absolute;
+  width: 100%;
+  top: 10px;
+  left: 0;
+  text-align: center;
 }
 .navbar-list {
   margin: 0;
@@ -48,10 +59,3 @@ header {
   text-decoration: none;
 }
 /*logo*/
-img {
-  float: left;
-  line-height: 21px;
-  width: 88px;
-  height: 41px;
-}
-/*wallpape*/
