--- a/style.css
+++ b/style.css
@@ -6,17 +6,19 @@ header {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-transform: uppercase;
-  text-align: center;
+}
+.bac {
   width: 100%;
-  height: 800px;
+  height: 100%;
   background: url(images/cover.jpg);
   background-color: #222;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 100% 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
-
 .header-overlay {
   background-color: rgba(44, 62, 80, 0.3);
   background-image: url(images/pattern.png);
