--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center 10%;
   position: absolute;
   top: 0;
   left: 0;
