--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 html,
 body,
-section,
 .home,
 .overlay {
   height: 100%;
@@ -17,15 +16,11 @@ section,
   background-position: center 5%;
 }
 .overlay {
+  height: 100%;
+  width: 100%;
   background-color: rgba(44, 62, 80, 0.3);
   background-image: url(images/pattern.png);
   background-repeat: repeat;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
 }
 
 /*header*/
@@ -34,13 +29,18 @@ header {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-transform: uppercase;
+  width: 100%;
   height: 50px;
+  position: absolute;
+  top: 0;
+  margin-top: 30px;
+  text-align: center;
 }
 
 /*navbar*/
 
-.navbar-list {
-  width: 564px;
+/*.navbar-list {
+  width: 100%;
   margin: 0 auto;
   padding: 0;
 }
@@ -49,48 +49,75 @@ header {
   padding-left: 20px;
   line-height: 21px;
   font-weight: 500;
+  text-align: left;
 }
 .navbar-info {
-  font-size: 10px;
-  color: #c4bfbf;
+  font-size: 18px;
+  color: #ffffff;
 }
 .navbar-link {
   font-size: 15px;
-  color: black;
+  color: rgb(85, 79, 79);
   text-decoration: none;
 }
-
-/*intro*/
-
-.introduction {
+*/
+.main {
+  width: 520px;
+  height: 518px;
+  background-color: white;
+  border-radius: 3px;
+  margin: auto;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.face {
+  width: 144px;
+  height: 144px;
+  border-radius: 50%;
+  display: block;
+  margin: 10px auto;
+}
+h1 {
+  font-size: 1.17em;
   text-align: center;
 }
+/*intro*/
+/*
+.introduction {
+  position: absolute;
+  width: 100%;
+  top: 45%;
+  left: 0;
+  text-align: center;
+  
+}
 .title {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  width: 6ch;
+  width: 35ch;
   position: relative;
   z-index: 1000;
   color: white;
   font-family: monospace;
+  font-size: 36px;
   white-space: nowrap;
   overflow: hidden;
-  border-right: 4px solid orange;
-  animation: flashing-border 0.75s step-end infinite, printed-text 5s steps(6);
+  border-right: 4px solid white;
+  animation: flashing-border 0.75s step-end infinite, printed-text 5s steps(35);
 }
 
 @keyframes flashing-border {
   0% {
-    border-color: orange;
+    border-color: white;
   }
   50% {
     border-color: transparent;
   }
   100% {
-    border-color: orange;
+    border-color: white;
   }
 }
 @keyframes printed-text {
@@ -98,6 +125,6 @@ header {
     width: 0;
   }
   to {
-    width: 6ch;
+    width: 35ch;
   }
-}
+}*/
