--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ body,
   top: 45%;
   left: 0;
   text-align: center;
-  
 }
 .title {
   margin: 0 auto;
@@ -70,35 +69,43 @@ body,
 
 /*header*/
 
-header {
+.header {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-transform: uppercase;
   width: 100%;
   height: 50px;
-  text-align: center;
+}
+.container_header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  width: 1000px;
+  margin: 0 auto;
 }
 
-/*navbar*/
+/*logo*/
+
+/*nav*/
 
 .navbar-list {
-  width: 100%;
   margin: 0 auto;
   padding: 0;
 }
 .navbar-item {
   display: inline-block;
-  padding-left: 20px;
-  line-height: 21px;
+  padding: 10px 20px;
+  line-height: 15px;
   font-weight: 500;
   text-align: left;
 }
 .navbar-info {
-  font-size: 13px;
+  font-size: 10px;
   color: #000000;
 }
 .navbar-link {
-  font-size: 10px;
-  color: rgb(85, 79, 79);
+  font-size: 15px;
+  color: #000000;
   text-decoration: none;
 }
