--- a/style.css
+++ b/style.css
@@ -75,6 +75,10 @@ body,
   text-transform: uppercase;
   width: 100%;
   height: 50px;
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+  background-image: url(/test.github.io/images/pattern.png);
 }
 .container_header {
   display: flex;
@@ -87,6 +91,9 @@ body,
 
 /*logo*/
 
+.logo {
+  color: #ffffff;
+}
 /*nav*/
 
 .navbar-list {
@@ -102,10 +109,16 @@ body,
 }
 .navbar-info {
   font-size: 10px;
-  color: #000000;
+  color: #ffffff;
 }
 .navbar-link {
   font-size: 15px;
-  color: #000000;
+  color: #ffffff;
   text-decoration: none;
+}
+.img {
+  background-image: url(/test.github.io/images/photo_2020-07-10_13-52-09.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
 }
