--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body,
 .home {
   width: 100%;
   height: 100%;
-  background: url(images/cover.jpg);
+  background: url(/test.github.io/images/cover.jpg);
   background-color: #222;
   background-repeat: no-repeat;
   background-size: cover;
@@ -19,7 +19,7 @@ body,
   height: 100%;
   width: 100%;
   background-color: rgba(44, 62, 80, 0.3);
-  background-image: url(images/pattern.png);
+  background-image: url(/test.github.io/images/pattern.png);
   background-repeat: repeat;
 }
 
@@ -78,7 +78,7 @@ body,
   position: fixed;
   top: 0;
   z-index: 9999;
-  background-image: url(/test.github.io/images/pattern.png);
+  background-image: url(images/pattern.png);
 }
 .container_header {
   display: flex;
@@ -116,9 +116,54 @@ body,
   color: #ffffff;
   text-decoration: none;
 }
-.img {
-  background-image: url(/test.github.io/images/photo_2020-07-10_13-52-09.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100%;
+/*about*/
+
+.about {
+  padding: 100px 0 100px 0;
+  height: 75%;
+  width: 100%;
+  background-color: #f5f5f5;
+}
+.row-about {
+  height: 220px;
+  width: 1000px;
+  margin: 0 auto;
+  text-align: center;
+}
+.title-about {
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  margin: 0;
+}
+.seperation {
+  border: 0;
+  margin: 30px auto;
+  height: 1px;
+  width: 100px;
+  background-color: #87878780;
+}
+.text-about-me {
+  font-family: Raleway, "Times New Roman", Times, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-size: 18px;
+  color: #666666;
+  width: 550px;
+  margin: auto;
+  line-height: 1.9;
+}
+.row-about2 {
+  display: flex;
+  justify-content: center;
+}
+.col {
+  margin: 0 15px;
+  width: 250px;
+  height: 250px;
+  background-color: #ffffff;
+  border-bottom: 1px solid #d4d4d4;
+  -display: flex;
+}
+.name-col {
+ 
 }
