--- a/style.css
+++ b/style.css
@@ -143,9 +143,6 @@ body,
   background-color: #87878780;
 }
 .text-about-me {
-  font-family: Raleway, "Times New Roman", Times, sans-serif;
-  font-size: 20px;
-  font-style: normal;
   font-size: 18px;
   color: #666666;
   width: 550px;
@@ -162,8 +159,28 @@ body,
   height: 250px;
   background-color: #ffffff;
   border-bottom: 1px solid #d4d4d4;
-  -display: flex;
+}
+.container-col {
+  width: 225px;
+  height: 177px;
+  margin: 0 auto;
+  padding: 40px 0;
+  
+}
+.icon-col {
+  display: block;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+}
+.content-container-col {
+  text-align: center;
 }
 .name-col {
- 
+  font: 700 13px Raleway, sans-serif;
+  text-transform: uppercase;
+}
+.text-col {
+  color: #666666;
+  line-height: 1.9;
 }
